--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.194",
     "@types/morgan": "^1.9.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1"
   }
